@@ -135,8 +135,7 @@ static inline void eth_addr_nicira_random(uint8_t ea[ETH_ADDR_LEN])
 bool eth_addr_is_reserved(const uint8_t ea[ETH_ADDR_LEN]);
 bool eth_addr_from_string(const char *, uint8_t ea[ETH_ADDR_LEN]);
 
-void compose_benign_packet(struct ofpbuf *, const char *tag,
-                           uint16_t snap_type,
+void compose_benign_packet(struct ofpbuf *,
                            const uint8_t eth_src[ETH_ADDR_LEN]);
 
 void eth_push_vlan(struct ofpbuf *, ovs_be16 tci);
@@ -182,6 +181,7 @@ void eth_addr_bitand(const uint8_t src[ETH_ADDR_LEN],
 #define ETH_TYPE_VLAN          0x8100
 #define ETH_TYPE_IPV6          0x86dd
 #define ETH_TYPE_LACP          0x8809
+#define ETH_TYPE_RARP          0x8035
 
 /* Minimum value for an Ethernet type.  Values below this are IEEE 802.2 frame
  * lengths. */
@@ -227,6 +227,25 @@ struct llc_snap_header {
     struct snap_header snap;
 } __attribute__((packed));
 BUILD_ASSERT_DECL(LLC_SNAP_HEADER_LEN == sizeof(struct llc_snap_header));
+
+#define ARP_HTYPE_ETH 0x0001
+#define RARP_REQUEST_REVERSE 0x0003
+
+#define RARP_HEADER_LEN 28
+/* RARP header only for Ethernet-IP. */
+struct rarp_header {
+    ovs_be16 hw_addr_space;        /* ARP_HTYPE_ETH. */
+    ovs_be16 proto_addr_space;     /* ETH_TYPE_IP. */
+    uint8_t hw_addr_length;        /* ETH_ADDR_LEN. */
+    uint8_t proto_addr_length;     /* IPV4_ADDR_LEN. */
+    ovs_be16 opcode;               /* RARP_REQUEST_REVERSE. */
+    uint8_t src_hw_addr[ETH_ADDR_LEN];
+    ovs_be32 src_proto_addr;
+    uint8_t target_hw_addr[ETH_ADDR_LEN];
+    ovs_be32 target_proto_addr;
+} __attribute__((packed));
+BUILD_ASSERT_DECL(RARP_HEADER_LEN == sizeof(struct rarp_header));
+
 
 #define VLAN_VID_MASK 0x0fff
 #define VLAN_VID_SHIFT 0
